-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11.0.5-oracle
-
Component/s: hotspot
-
b01
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229276 | 11.0.5 | Coleen Phillimore | P4 | Resolved | Fixed | b03 |
With the fix of JDK-8215505 to 11u, we need another fix JDK-8218266 to support this functionality.
AsJDK-8218266 fix has changed adjacent code and cannot be backported completly.
This request it to partially backportJDK-8218266
As
This request it to partially backport
- backported by
-
JDK-8229276 Partial backport of JDK-8218266
-
- Resolved
-
- relates to
-
JDK-8218266 G1 crash in AccessInternal::PostRuntimeDispatch
-
- Closed
-