8222914: Partial backport of JDK-8218266 8215505: Cleanup jvm.cpp obsolete code after JDK-8210094: Better loading of classloader classes

Remove dead code, protection_domains can be unloaded in the dictionary pd_set.

Reviewed-by: lfoltan, dholmes, zgu, hseigel